# Sliding-Puzzle-Solver

./: CMakeLists.txt  CompareNodes.h  Model.cpp  Model.h  Node.h  README.md  SlidingPuzzleApp.cpp  SlidingPuzzleApp.h  SlidingPuzzleSolver.cpp  SlidingPuzzleSolver.h  SubGoal.h  main.cpp
